assets/lamartina/styles/style.css
/* ... */
#section-3 {
	background: #ebebeb;
	z-index: 1;
	background-size: cover;
}

#section-1 .section-text,
#section-2 .section-text,
#section-4 .section-text,
#section-5 .section-text {
	margin-top: 70%;
	margin-bottom: 5%;
	padding: 0 2%;
}

#section-3 .section-text,
#section-6 .section-text {
	margin: 25% 0;
}

#section-4 {
		background: url(../assets/slide-03.jpg) 50% 0 no-repeat;
		z-index: 1;
}

#section-5 {
	background: url(../assets/slide-02.jpg) 70% 0 no-repeat;
	z-index: 1;
}

#section-6 {
	background: #ebebeb;
	z-index: 1;
}

#section-6 .section-text--bottom {
	background: transparent;
	background: #ebebeb;
}


@media screen and (min-width: 600px) {
	/* intro */
	#section-1 {
		background: url(../assets/slide.jpg) 50% 0 fixed no-repeat;
		z-index: 1;
		background-size: cover;
	}

	#section-2 {
		background: url(../assets/intro.jpg) 50% 0 fixed no-repeat;
		z-index: 1;
		background-size: cover;
	}

	#section-3 {
		background: url(../assets/slide-04.jpg) 50% 0 fixed no-repeat;
		z-index: 1;
		background-size: cover;
	}

	#section-4 {
		background: url(../assets/slide-03.jpg) 50% 0 fixed no-repeat;
		z-index: 1;
		background-size: cover;
	}

	#section-5 {
		background: url(../assets/slide-02.jpg) 50% 0 fixed no-repeat;
		z-index: 1;
		background-size: cover;
	}

	#section-6 {
		background: url(../assets/cortos-alt.jpg) -150% -50% fixed no-repeat;
		background-size: cover;
		z-index: 1;
	}

	@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
		#section-1,
		#section-2,
		#section-3,
		#section-4,
		#section-5,
		#section-6 {
			background-size: auto auto;
		}
	}

	@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:landscape) {
		#section-1,
		#section-2,
		#section-3,
		#section-4,
		#section-5,
		#section-6 {
			background-size: auto auto;
		}
	}

	#section-6 .section-text--bottom {
		background: transparent;
		background: #ebebeb;
	}

	#section-1 .section-text,
	#section-2 .section-text,
	#section-3 .section-text,
	#section-4 .section-text,
	#section-5 .section-text,
	#section-6 .section-text {
		margin: 0;
	}
}

@media screen and (min-width: 600px) {
	#section-5 .section-text--centered,
	#section-3 .section-text--centered {
		width: 33.3%;
		padding-left: 4%;
		padding-right: 0%;
		left: 31%;
		text-shadow: none;
		top: 2em;
	}

	#section-6 .section-text--bottom {
		top: 0;
		bottom: 0;
		background: #ebebeb;
		right: 0;
		width: 35%;
		padding: 0 5%;
		left: auto;
	}
}

#section-3 .section-headline,
#section-3 .section-copy,
#section-6 .section-headline,
#section-6 .section-copy {
	text-shadow: none;
	color: #2c2019;
}


#section-3 .section-copy,
#section-6 .section-copy {
	padding: 0 2.5em;
}



#stores {
	position: relative;
	background: url(../assets/gallery/07-bw.jpg) 50% 0 fixed no-repeat;
}

#stores:before,
#gallery:before {
	content:"";
	position: absolute;
	background: rgba(0,0,0,.75);
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
}

#gallery .thumb {
	margin-bottom: 2em;
	background: #000;
	transition: all .2s ease-out;
}

#gallery .thumb a {
	cursor: -webkit-zoom-in;
	cursor: zoom-in;
}

#gallery .thumb img {
	opacity: .75;
	transition: opacity .5s ease-in-out;
}

#gallery .thumb:hover img {
	opacity: 1;
}



.gallery-open {
	position: relative;
}

#gallery .picture-large {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	text-align: center;
	z-index: 9999;
	background: rgba(0,0,0,.75);
}

#gallery .picture-large .close-handle {
	position: absolute;
	top: 0em;
	right: 1em;
	padding: 1em;
	font-size: 2em;
	cursor: pointer;
}
#gallery .picture-large img {
	cursor: -webkit-zoom-out;
	cursor: zoom-out;
	max-height: 100%;
}

/* stores */
#stores .btn-icon {
	position: absolute;
	left: 1.75rem;
	top: 35px;
	left: 20px;
	opacity: .5;
	transition: all .5s ease-in-out;
	-webkit-transition: all .5s ease-in-out;
}

#stores .btn-icon:hover {
	opacity: .8;
}

	/* open state */
	#stores.open {
		position: fixed;
		padding-top: 0;
		top: 2em;
		bottom: 0;
		left: 0;
		right: 0;
		z-index: 9999;
		background: rgba(0, 0, 0, .65);
	}


#stores .store-list {
	list-style: none;
	margin: 0;
	padding: 0;

}

#stores .store-list li {
	display: inline-block;
	text-align: left;
}

/* selected parent state */
#stores .store-list li.selected {
	display: block;
}

#stores .store-list li.selected a {
	pointer-events: none;
	cursor: text;
	font-size: 1.25em;
	margin: 0;
	padding-top: 0;
}

#stores .store-list li a {
	display: block;
	padding: 1.5em;
	margin: 0 1em;
}

#stores .store-list li a {
	text-transform: uppercase;
	padding: .5em 0;
	font-size: .9em;
}

/* state: enter */
/*.store-detail {
	-webkit-transition: all .4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
	-o-transition: all .4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
	transition: all .4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
}

.store-detail.ng-enter {
	-webkit-transform: translate3D(0,-20px,0);
	-ms-transform: translate3D(0,-20px,0);
	-o-transform: translate3D(0,-20px,0);
	transform: translate3D(0,-20px,0);
	opacity: 0;
}

.store-detail.ng-enter-stagger {
	-webkit-transition-delay: 0.1s;
	-moz-transition-delay: 0.1s;
	transition-delay: 0.1s;

	-webkit-transition-duration: 0s;
	transition-duration: 0s;
}

.store-detail.ng-enter.ng-enter-active {
	opacity: 1;
	-webkit-transform: translate3D(0,0px,0);
	-ms-transform: translate3D(0,0px,0);
	-o-transform: translate3D(0,0px,0);
	transform: translate3D(0,0px,0);
}

.store-detail.ng-leave {
	-webkit-transform: translate3D(0,-20px,0);
	-ms-transform: translate3D(0,-20px,0);
	-o-transform: translate3D(0,-20px,0);
	transform: translate3D(0,-20px,0);
}

.store-detail.ng-leave-active {
	opacity: 0;
	display: none;
}*/


#stores .row {
	/*margin: 6em 0;*/
}

/* current area */
.current-area {
	padding-bottom: 2em;
}

.current-area ul li {
	border-bottom: 1px solid rgba(255,255,255,.1);
}

.current-area ul li:last-child {
	border-bottom: 0;
}

@media screen and (min-width: 600px) {
	.current-area	ul li {
	}
}
/* ... */

